@@ -82,6 +82,7 @@ extern int gunstick_range_x,gunstick_range_y,gunstick_y_offset,gunstick_solo_bri
 
 
 extern int mouse_x,mouse_y;
+extern int mouse_wheel_vertical,mouse_wheel_horizontal;
 extern z80_bit kempston_mouse_emulation;
 extern int mouse_left,mouse_right,mouse_pressed_close_window;
 
